<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/item_bg_white_shadow"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/addlist_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_type"
                android:textColor="@color/hui_main"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/addlist_item_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/car_type_s"
                android:textColor="@color/hui_line"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#e6e5e5" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/addlist_item_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/phone_bule32"
                android:text="@string/car_no"
                android:textColor="@color/hui_main"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/addlist_item_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/address_bule32"
                android:text="@string/car_color"
                android:textColor="@color/hui_main"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_vertical|right"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/addlist_item_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/corners_hui_4_5dp"
                android:drawableLeft="@drawable/edit_white"
                android:padding="10dp"
                android:text="@string/delete"
                android:textColor="#ffffff"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>
    
    

</LinearLayout>