<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/bm_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:paddingBottom="@dimen/bottom_menu_padding_top"
        android:paddingTop="@dimen/bottom_menu_padding_top" >

        <LinearLayout
            android:id="@+id/bm_lin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:splitMotionEvents="false" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/bm_tv_home"
                    style="@style/bottom_menu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/main_table_ico_one"
                    android:text="@string/main_button_text1" />
            </RelativeLayout>

            <TextView
                android:id="@+id/bm_tv_invest"
                style="@style/bottom_menu"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:drawableTop="@drawable/main_table_ico_two"
                android:text="@string/main_button_text2" />

            <TextView
                style="@style/bottom_menu"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />

            <TextView
                android:id="@+id/bm_tv_account"
                style="@style/bottom_menu"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:drawableTop="@drawable/main_table_ico_three"
                android:text="@string/main_button_text4" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/bm_tv_more"
                    style="@style/bottom_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:drawableTop="@drawable/main_table_ico_four"
                    android:text="@string/main_button_text5" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp" 
            android:layout_alignTop="@id/bm_lin"
            android:background="#dfdfdf"
             />

        <RelativeLayout
            android:id="@+id/bm_center_re"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/bm_lin"
            android:layout_centerHorizontal="true"
            android:gravity="center" >

            <TextView
                android:id="@+id/bm_tv_mian"
                style="@style/bottom_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/main_table_ico_midle"
                android:text="@string/main_button_text2" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>