<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_parent_laot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/main_action_left_img"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/user_head_bule" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/logo_030" />

        <ImageView
            android:id="@+id/main_more_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/more" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/bm_parent"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:paddingBottom="@dimen/bottom_menu_padding_top"
            android:splitMotionEvents="false" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <!-- 地图显示层 -->

                <FrameLayout
                    android:id="@+id/am_fragment"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0" />

                <TextView
                    android:id="@+id/bm_line_tv"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dfdfdf" />

                <LinearLayout
                    android:id="@+id/bm_lin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:splitMotionEvents="false" >

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/bm_tv_frend"
                            style="@style/bottom_menu"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/main_table_ico_one"
                            android:text="@string/main_button_text1" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/bm_tv_life"
                        style="@style/bottom_menu"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:drawableTop="@drawable/main_table_ico_two"
                        android:text="@string/main_button_text2" />

                    <TextView
                        style="@style/bottom_menu"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0" />

                    <TextView
                        android:id="@+id/bm_tv_center"
                        style="@style/bottom_menu"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:drawableTop="@drawable/main_table_ico_three"
                        android:text="@string/main_button_text4" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/bm_tv_my"
                            style="@style/bottom_menu"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:drawableTop="@drawable/main_table_ico_four"
                            android:text="@string/main_button_text5" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bm_center_re"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/bottom_menu_padding_top"
            android:gravity="center" >

            <TextView
                android:id="@+id/bm_tv_serve"
                style="@style/bottom_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/main_table_ico_midle_h"
                android:text="@string/main_button_text3"
                android:textColor="@color/bulue_main" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>